# Haggl

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  demo_full_flow.py  demo_intuit_payment.py  demo_x402.py  docker-compose.yml  env.example  main.py  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: calling_agent.yml
docs/: API.md  ARCHITECTURE.md
frontend/: Brand_guide.md  Dockerfile  README.md  branding-kit.md  dashboard-overview.md  haggl_ui_spec_final.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/inbox/: page.tsx
frontend/app/new-order/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/orders/[id]/: page.tsx
frontend/app/orders/[id]/live/: page.tsx
frontend/app/products/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/suppliers/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/: AgentActivityPanel.tsx  NavBar.tsx  NavBarWrapper.tsx  OrderCard.tsx  PaymentModal.tsx  ProgressPhase.tsx  StatCard.tsx  StatusBadge.tsx
frontend/lib/: useAgentEvents.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/approvals/: page.tsx
frontend/src/app/(dashboard)/messages/: page.tsx
frontend/src/app/(dashboard)/order/new/: page.tsx
frontend/src/app/(dashboard)/orders/: page.tsx
frontend/src/app/(dashboard)/payments/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/vendors/: page.tsx
frontend/src/app/(dashboard)/vendors/[id]/: page.tsx
frontend/src/app/(dashboard)/wallet/: page.tsx
frontend/src/components/activity/: live-feed.tsx
frontend/src/components/layout/: nav.tsx
frontend/src/components/vendors/: correction-dialog.tsx  preference-controls.tsx  radar-chart.tsx  vendor-card.tsx
frontend/src/lib/: demo-data.ts  types.ts
plans/: PRD.md  adk-agent-setup.md  architecture.md  demo-1min-user-flow.md  implementation-plan.md  pitch.md  product-summary.md  resources.md  rubric.md  tech-stack.md  user-flow.md  x402-ach-bridge-plan.md
scripts/: demo.py  seed_data.py
src/: __init__.py  events.py  server.py
src/calling_agent/: __init__.py  agent.py  schemas.py  server.py
src/calling_agent/tools/: __init__.py  vapi_tool.py
src/evaluation_agent/: __init__.py  agent.py  evaluation-agent.md  fine_tune.py  learned_model.json  model_config.json  schemas.py  training_data.json
src/evaluation_agent/tools/: __init__.py  exa_tool.py  voyage_tool.py
src/message_agent/: __init__.py  agent.py  schemas.py
src/message_agent/tools/: __init__.py  evaluation_tool.py  order_tool.py  sourcing_tool.py  vonage_tool.py
src/payment_agent/: __init__.py  browserbase.py  executor.py  schemas.py  server.py
src/sourcing_agent/: __init__.py  agent.py  schemas.py
src/sourcing_agent/data/: vendors.json
src/sourcing_agent/tools/: __init__.py  exa_tool.py  extractor.py  storage.py
src/storage/: __init__.py  businesses.py  calls.py  conversations.py  database.py  evaluations.py  orders.py  schemas.py  vendors.py
src/x402/: __init__.py  authorizer.py  credential_vault.py  escrow.py  mongodb.py  schemas.py  wallet.py
tests/: __init__.py  conftest.py  test_server.py
