[project]
name = "haggl"
version = "0.3.0"
description = "Haggl - AI-powered B2B procurement with multi-agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # Message Agent
    "vonage>=3.0.0",
    "openai>=1.0.0",
    # x402 / Payment Agent
    "pymongo>=4.6.0",
    "cryptography>=42.0.0",
    "anthropic>=0.40.0",
    # Evaluation Agent
    "voyageai>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
# Real CDP integration (optional for demos)
cdp = [
    "cdp-sdk>=0.1.0",
]
# Browser automation
browser = [
    "playwright>=1.40.0",
]
# Full production stack
full = [
    "cdp-sdk>=0.1.0",
    "playwright>=1.40.0",
    "stripe>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/calling_agent",
    "src/message_agent",
    "src/sourcing_agent",
    "src/evaluation_agent",
    "src/storage",
    "src/x402",
    "src/payment_agent",
]
